    those objects that had net changes within the 
    scope of that transaction, that is objects which
    were dirty or were modified on a flush.  This
    allows the typical use case for begin_nested(),
    that of altering a small subset of objects, to
    leave in place the data from the larger enclosing
    set of objects that weren't modified in 
    that sub-transaction.  [ticket:2452]

  - [bug] Fixed bug whereby subqueryload() from 
    a polymorphic mapping to a target would incur
    a new invocation of the query for each 
    distinct class encountered in the polymorphic
    result.  [ticket:2480].  Also in 0.7.8.

  - [bug] Fixed issue in unit of work
    whereby setting a non-None self-referential
    many-to-one relationship to None
    would fail to persist the change if the
    former value was not already loaded.
    [ticket:2477]. Also in 0.7.7

  - [bug] Fixed bug in relationship comparisons
    whereby calling unimplemented methods like
    SomeClass.somerelationship.like() would
    produce a recursion overflow, instead
    of NotImplementedError. Also in 0.7.7.

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in 
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.  
    [ticket:2320]

  - [bug] The warning emitted when using 
    delete-orphan cascade with one-to-many
    or many-to-many without single-parent=True
    is now an error.  The ORM
    would fail to function subsequent to this
    warning in any case.  [ticket:2405]

  - [feature] Query now "auto correlates" by 
    default in the same way as select() does.
    Previously, a Query used as a subquery
    in another would require the correlate()
    method be called explicitly in order to 
    correlate a table on the inside to the
    outside.  As always, correlate(None)
    disables correlation.  [ticket:2179]
