@@ -448,8 +448,10 @@ class LazyLoader(AbstractRelationshipLoader):
         return criterion
 
     def _load_for_state(self, state, passive):
-        if not state.key and \
-            (not self.parent_property.load_on_pending or not state.session_id):
+        if not state.session_id or \
+            not state.key and \
+            not self.parent_property.load_on_pending and \
+            not state._load_pending:
             return attributes.ATTR_EMPTY
 
         pending = not state.key
